--- a/NaoQt/NaoQt.vcxproj
+++ b/NaoQt/NaoQt.vcxproj
@@ -135,6 +135,9 @@
   <ItemGroup>
     <QtMoc Include="include\NaoQt.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\DefaultSettingsValues.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
