--- a/libnao/libnao.vcxproj
+++ b/libnao/libnao.vcxproj
@@ -173,6 +173,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Containers\NaoBytes.cpp" />
+    <ClCompile Include="src\Filesystem\NaoFileSystemManager.cpp" />
+    <ClCompile Include="src\IO\NaoFileIO.cpp" />
     <ClCompile Include="src\IO\NaoIO.cpp" />
     <ClCompile Include="src\IO\NaoMemoryIO.cpp" />
     <ClCompile Include="src\libnao.cpp" />
@@ -180,13 +182,17 @@
     <ClCompile Include="src\NaoObject.cpp" />
     <ClCompile Include="src\Plugin\NaoPlugin.cpp" />
     <ClCompile Include="src\Plugin\NaoPluginManager.cpp" />
+    <ClCompile Include="src\Utils\SteamUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Containers\NaoBytes.h" />
     <ClInclude Include="include\Containers\NaoPair.h" />
     <ClInclude Include="include\Containers\NaoString.h" />
     <ClInclude Include="include\Containers\NaoVector.h" />
+    <ClInclude Include="include\Filesystem\Filesystem.h" />
+    <ClInclude Include="include\Filesystem\NaoFileSystemManager.h" />
     <ClInclude Include="include\Functionality\NaoMath.h" />
+    <ClInclude Include="include\IO\NaoFileIO.h" />
     <ClInclude Include="include\IO\NaoIO.h" />
     <ClInclude Include="include\IO\NaoMemoryIO.h" />
     <ClInclude Include="include\libnao.h" />
@@ -194,6 +200,8 @@
     <ClInclude Include="include\NaoObject.h" />
     <ClInclude Include="include\Plugin\NaoPlugin.h" />
     <ClInclude Include="include\Plugin\NaoPluginManager.h" />
+    <ClInclude Include="include\Utils\SteamUtils.h" />
+    <ClInclude Include="include\Utils\vdf_parser.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libnao.licenseheader" />
