--- a/Plugin_DAT/Plugin_DAT.vcxproj.filters
+++ b/Plugin_DAT/Plugin_DAT.vcxproj.filters
@@ -14,13 +14,19 @@
     <ClCompile Include="src\Plugin_DAT.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
+    <ClCompile Include="src\DATReader.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Plugin_DAT.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="include\DATReader.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="NaoQt.licenseheader" />
+    <None Include="..\libnao\libnao.licenseheader" />
   </ItemGroup>
 </Project>
