--- a/Plugin_DiskDirectory/Plugin_DiskDirectory.vcxproj.filters
+++ b/Plugin_DiskDirectory/Plugin_DiskDirectory.vcxproj.filters
@@ -21,6 +21,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\NaoQt\NaoQt.licenseheader" />
+    <None Include="..\libnao\libnao.licenseheader" />
   </ItemGroup>
 </Project>
