--- a/libnao/libnao.vcxproj
+++ b/libnao/libnao.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="src\NaoObject.cpp" />
     <ClCompile Include="src\Plugin\NaoPlugin.cpp" />
     <ClCompile Include="src\Plugin\NaoPluginManager.cpp" />
+    <ClCompile Include="src\Utils\DesktopUtils.cpp" />
     <ClCompile Include="src\Utils\SteamUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -201,6 +202,7 @@
     <ClInclude Include="include\NaoObject.h" />
     <ClInclude Include="include\Plugin\NaoPlugin.h" />
     <ClInclude Include="include\Plugin\NaoPluginManager.h" />
+    <ClInclude Include="include\Utils\DesktopUtils.h" />
     <ClInclude Include="include\Utils\SteamUtils.h" />
     <ClInclude Include="include\Utils\vdf_parser.hpp" />
   </ItemGroup>
